<resources>
    <string name="app_name">CS Wallet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="google_login"> Google</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_signup">Sign Up</string>

    <string name="action_settings">Settings</string>
    <string name="signup_link">No account yet? Create one</string>
    <string name="signin_link">Already a member? Login</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>

    <string name="forgot_password_msg">Forgot Password? Click Here</string>
    <string name="google_name">Google</string>
    <string name="social_sign_in">OR Sign In With</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="messagehint">Type your message here</string>

    <string name="chat_bot">Chat Bot</string>
    <string name="transaction_history">Transaction History\n(Wallet Statement)</string>
</resources>
